[gd_scene load_steps=8 format=1]

[ext_resource path="res://script/main.gd" type="Script" id=1]
[ext_resource path="res://font/nunito.fnt" type="BitmapFont" id=2]
[ext_resource path="res://script/timer.gd" type="Script" id=3]
[ext_resource path="res://font/tickingTimeBomb.fnt" type="BitmapFont" id=4]
[ext_resource path="res://sound/start.ogg" type="AudioStream" id=5]
[ext_resource path="res://sound/chime.ogg" type="AudioStream" id=6]

[sub_resource type="SRConfig" id=1]

"hmm directory" = "res://stt/en-us"
"dictionary file" = "res://stt/cmudict-en-us.dict"
"keywords file" = "res://stt/commands.kws"

[node name="Game" type="Node2D"]

script/script = ExtResource( 1 )

[node name="StartMessage" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 419.0
margin/top = 300.0
margin/right = 635.0
margin/bottom = 343.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Say \"start\""
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Score" type="Label" parent="."]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 869.0
margin/top = 62.0
margin/right = 1054.0
margin/bottom = 105.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score:"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="AnswerType" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 14.0
margin/top = 14.0
margin/right = 166.0
margin/bottom = 57.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Answer"
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Word" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 537.0
margin/top = 159.0
margin/right = 577.0
margin/bottom = 202.0
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Timer" type="Timer" parent="."]

process_mode = 0
wait_time = 60.0
one_shot = true
autostart = false
script/script = ExtResource( 3 )

[node name="AverageTime" type="Label" parent="Timer"]

anchor/top = 1
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 927.0
margin/top = 586.0
margin/right = 24.0
margin/bottom = 51.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.171875, 0.171875, 0.171875, 1 )
text = "Timer"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="GameStart" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 5 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="Chime" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 6 )
stream/play = false
stream/loop = false
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="STT" type="SRRunner" parent="."]

config = SubResource( 1 )
"recorder buffer size (bytes)" = 2048


